classDiagram
    class CarryUnit {
        +int version
        +SessionNamespace session
        +CustomerNamespace customer
        +OrderNamespace order
        +PaymentNamespace payment
        +WorkflowNamespace workflow
        +LogisticsNamespace logistics
        +AnalyticsNamespace analytics
        +MetadataNamespace metadata
        +merge_patch(patch: Dict) CarryUnit
    }

    class SessionNamespace {
        +str session_id
        +str customer_phone
        +str business_id
        +str workflow_version_id
        +str session_started_at
    }

    class CustomerNamespace {
        +str name
        +str email
        +str address
    }

    class OrderNamespace {
        +List~OrderItem~ items
        +float total
        +str status
    }

    class OrderItem {
        +str item_id
        +int quantity
        +float price
    }

    class PaymentNamespace {
        +str payment_url
        +str transaction_id
        +str status
    }

    class WorkflowNamespace {
        +List~str~ execution_trace
    }

    class LogisticsNamespace {
        +str delivery_id
        +str address
        +str status
    }

    class WorkflowGraph {
        +str workflow_version_id
        +str business_id
        +int version_number
        +str entry_node_id
        +Dict~str, WorkflowNode~ nodes
        +List~WorkflowEdge~ edges
        +Dict~str, Dict~str, str~~ fsm_transition_table
    }

    class WorkflowNode {
        +str id
        +str module_name
        +Dict config
        +str fsm_transition_to
    }

    class WorkflowEdge {
        +str from_node
        +str to_node
        +EdgeCondition condition
    }

    class EdgeCondition {
        +str type
        +str key
        +Any value
    }

    class ModuleContract {
        +str module_name
        +str display_name
        +str version
        +str domain
        +Dict~str, str~ requires
        +Dict~str, str~ produces
        +List~str~ allowed_fsm_states
        +List~str~ side_effects
        +bool is_idempotent
        +bool expects_user_input
        +RetryConfig retry_config
    }

    CarryUnit *-- SessionNamespace
    CarryUnit *-- CustomerNamespace
    CarryUnit *-- OrderNamespace
    CarryUnit *-- PaymentNamespace
    CarryUnit *-- WorkflowNamespace
    CarryUnit *-- LogisticsNamespace
    OrderNamespace *-- OrderItem

    WorkflowGraph *-- WorkflowNode
    WorkflowGraph *-- WorkflowEdge
    WorkflowEdge *-- EdgeCondition

    ModuleContract *-- RetryConfig
